--- a/index.html
+++ b/index.html
@@ -7,13 +7,49 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <nav class="header__nav">
+                 <a href="./index.html">
+                    <img width="50" height="50" src="./mars.png" alt="">
+                 </a>
+                 <ul class="header__list">
+                    <li class="header__item">
+                        <a class="header__link" href="">HOME</a>
+                    </li>
+                    <li class="header__item">
+                        <a class="header__link" href="./about.html">ABAUT US</a>
+                    </li>
+                    <li class="header__item">
+                        <a class="header__link" href="">*******</a>
+                    </li>
+                    <button onclick="black()">black</button>
+                    <button onclick="white()">white</button>
+                 </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <div class="hero__wrapper">
+                <div class="text__box">
+                    <h1 class="title">
+work that we produce for our clients                    </h1>
+                    <p class="hero__title">
+                        Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
+                    </p>
+                    <button class="btn">Create your plan</button>
+                </div>
+<div class="img">
+<img class="img1" src="./images/Rectangle 679.png" alt="">
+<img class="img2" src="./images.jpg" alt="">
+</div>
+            </div>
+        </div>
+    </section>
 
 
-
-    <button onclick="black()">black</button>
-    <button onclick="white()">white</button>
-
-    dqweqwe
+    
     <script src="./main.js"></script>
 </body>
 </html>
